--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-/* Common CSS Styling */
-
+/* General CSS Styling */
 :root {
     --primary: #0026ff;
     --secondary: #f4f804;
@@ -8,7 +7,7 @@
 body {
     font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     -webkit-font-smoothing: antialiased;
-    background-color: #000;
+    background-color: #e4e4e4;
     color: #fff;
     margin: 0;
     padding: 0;
@@ -47,20 +46,11 @@ a {
     border: solid 2px var(--secondary);
 }
 
+/* Main CSS Styling */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* ------------------------------------------------------------------
+NAVBAR
+-------------------------------------------------------------------- */
 #navbar {
     background-color: var(--secondary);
 }
@@ -99,28 +89,78 @@ a {
     height: fit-content;
 }
 
+/* ------------------------------------------------------------------
+CARDS
+-------------------------------------------------------------------- */
+#main .display-card {
+    margin: 100px auto 20px auto;
+    background-color: var(--primary);
+    min-height: 350px;
+    padding: 0 0 10px 0;
+    border: none;
+    border-radius: 30px;
+    box-shadow: 8px 8px 15px #808080;
+}
 
+.display-card img {
+    width: 100%;
+    border-radius: 30px 30px 0 0;
+}
 
+.display-card h2 {
+    color: var(--secondary);
+    text-align: center;
+    margin: 10px;
+    font-size: 32px;
+    font-family: sans-serif;
+    font-weight: 600;
+    font-style: italic;
+}
 
+.display-card a {
+    color: #fff;
+    text-decoration: none;
+    font-family: monospace;
+    font-weight: 600;
+    font-size: 20px;
+    text-align: center;
+    margin: 10px;
+    border: solid var(--secondary) 3px;
+    border-radius: 15px;
+}
 
+.display-card a:hover {
+    background-color: var(--secondary);
+    color: var(--primary);
+    border: solid #fff 3px
+}
 
+/* ------------------------------------------------------------------
+FOOTER
+-------------------------------------------------------------------- */
+#footer {
+    background-color: var(--secondary);
+    height: 60px;
+    padding: 18px;
+    margin-top: 50px;
+}
 
+#footer h4 {
+    text-align: center; 
+    color: var(--primary); 
+    font-family: monospace;
+    font-size: 20px;
+}
 
+#footer a {
+    color: var(--primary);
+    font-family: monospace;
+    font-size: 22px;
+    font-weight: 600;
+    text-decoration: none;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#footer a:hover {
+    text-decoration: underline;
+    font-style: italic;
+}
