--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,28 +93,35 @@ NAVBAR
 CARDS
 -------------------------------------------------------------------- */
 #main .display-card {
-    margin: 100px auto 20px auto;
+    margin: 100px 20px 20px auto;
     background-color: var(--primary);
     min-height: 350px;
     padding: 0 0 10px 0;
     border: none;
-    border-radius: 30px;
+    border-radius: 50px 50px 30px 30px;
     box-shadow: 8px 8px 15px #808080;
+}
+
+#main .display-card:hover {
+    border: solid 5px #ced100;
+    border-top: none;
 }
 
 .display-card img {
     width: 100%;
     border-radius: 30px 30px 0 0;
+    height: 160px;
 }
 
 .display-card h2 {
     color: var(--secondary);
     text-align: center;
     margin: 10px;
-    font-size: 32px;
+    font-size: 25px;
     font-family: sans-serif;
     font-weight: 600;
     font-style: italic;
+    text-transform: capitalize;
 }
 
 .display-card a {
